// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretDetail with a secret displays secrets details 1`] = `
<div>
  <div />
  <div
    className="container"
  >
    <div
      className="configuration-map"
    >
      <div
        className="configuration-map-section"
      >
        <div
          className="configuration-map-row table-row"
        >
          <div
            className="configuration-map-label"
          >
            <div
              className="configuration-map-label"
            />
          </div>
          <div
            className="configuration-map-value"
          />
        </div>
        <div
          className="configuration-map-row table-row"
        >
          <div
            className="configuration-map-label"
          />
          <div
            className="configuration-map-value"
          >
            <div>
              <span
                className="secret-toggle clickable"
                onClick={[Function]}
              >
                <svg
                  aria-label="system-eye icon"
                  className="css-1vunjz0"
                  data-cy="icon"
                  height={16}
                  preserveAspectRatio="xMinYMin meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <use
                    xlinkHref="#system-eye"
                  />
                </svg>
              </span>
              ••••••••
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SecretDetail with secret store error displays PermissionError for 403 1`] = `
<div>
  <div />
  <div
    className="row"
  >
    <div
      className="column-small-8 column-small-offset-2 column-medium-6 column-medium-offset-3"
    >
      <h3
        className="text-align-center flush-top"
      >
        Permission denied
      </h3>
      <p
        className="text-align-center flush-bottom"
      />
    </div>
  </div>
</div>
`;

exports[`SecretDetail with secret store error displays RequestErrorMsg for default error 1`] = `
<div>
  <div />
  <div
    className="row"
  >
    <div
      className="column-small-8 column-small-offset-2 column-medium-6 column-medium-offset-3"
    >
      <h3
        className="text-align-center flush-top"
      >
        DC/OS UI cannot retrieve the requested information at this moment.
      </h3>
      <p
        className="text-align-center flush-bottom"
      >
        You can also join us on our 
        <a
          href="https://dcos-community.slack.com/messages/general/"
          target="_blank"
        >
          Slack channel
        </a>
         or send us an email at 
        <a
          href="mailto:help@dcos.io"
        >
          help@dcos.io
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;
